--- a/home.css
+++ b/home.css
@@ -23,7 +23,7 @@ body{
     height: 90px;
     padding-left: 10px;
 
-    background-image: url(assets/Logo.png);
+    background-image: url(Assets/Logo.png);
     background-repeat: no-repeat;
     background-position: center;
 }   
